# terraform-manager

./: .coveragerc  .gitignore  .style.yapf  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  update-requirements.sh
.github/workflows/: master.yml  pull-requests.yml  tags.yml
requirements/: base.txt  windows.txt
src/terraform_manager/: __main__.py  cli_handlers.py
src/terraform_manager/entities/: error_response.py  run.py  terraform.py  variable.py  workspace.py
src/terraform_manager/interface/run_watcher/: __init__.py  active_runs_view.py  active_runs_view_shared_state.py  screen_player.py
src/terraform_manager/terraform/: __init__.py  credentials.py  execution_modes.py  locking.py  pagination.py  runs.py  variables.py  versions.py  working_directories.py  workspaces.py
src/terraform_manager/utilities/: throttle.py  utilities.py
tests/: test___main__.py
tests/entities/: test___init__.py  test_run.py  test_terraform.py  test_variable.py  test_workspace.py
tests/interface/run_watcher/: test_active_runs_view.py  test_active_runs_view_shared_state.py
tests/terraform/: test_credentials.py  test_execution_modes.py  test_locking.py  test_pagination.py  test_runs.py  test_variables.py  test_versions.py  test_working_directories.py  test_workspaces.py
tests/utilities/: test_utilities.py  tooling.py
