[metadata]
name = terraform-manager
author = cooperwalbrun
description = A CLI tool for conveniently managing Terraform workspaces en masse.
long-description = file:README.md
long-description-content-type = text/markdown
url = https://github.com/cooperwalbrun/terraform-manager
platforms = any
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = =src
# The following line is managed and updated by PyScaffold
setup_requires = pyscaffold>=3.2a0,<3.3a0
python_requires = >=3, <4
install_requires =
    wheel

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox
development =
    # Interpolation via %()s works because setuptools uses this: https://docs.python.org/3/library/configparser.html#configparser.BasicInterpolation
    %(testing)s
    pip-tools
    yapf

[test]
# The line below tells setuptools to install everything listed under options.extras_require when you issue "python setup.py test"
extras = True

[tool:pytest]
addopts = -s --cov
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[pyscaffold]
# These were PyScaffold's parameters that were used when the project was created
version = 3.2.3
package = terraform-manager
extensions =
    pyproject
    tox
