[metadata]
name = terraform-manager
author = cooperwalbrun
description = A CLI tool for conveniently managing Terraform workspaces en masse.
long-description = file:README.md
long-description-content-type = text/markdown
url = https://github.com/cooperwalbrun/terraform-manager
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = =src
# The following line is managed and updated by PyScaffold
setup_requires = pyscaffold>=3.2a0,<3.3a0
python_requires = >=3.6,<4
install_requires =
    asciimatics>=1.12.0
    ratelimit>=2.2.1
    regex>=2020.10.11
    requests>=2.25.0
    semver>=2.13.0
    tabulate>=0.8.7
    timeago>=1.0.15
    wheel>=0.35.1

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
    responses
    tox
github_actions =
    # Interpolation via %()s works because setuptools uses this: https://docs.python.org/3/library/configparser.html#configparser.BasicInterpolation
    %(testing)s
    tox-gh-actions
development =
    %(testing)s
    pip-tools
    yapf

[options.entry_points]
console_scripts =
    terraform-manager = terraform_manager.__main__:main

[test]
# The line below tells setuptools whether to install everything listed under options.extras_require when you issue "python setup.py test"
extras = False

[tool:pytest]
addopts = --cov -p no:warnings
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = sdist bdist_wheel

[bdist_wheel]
# We do not support functionality on Python versions other than the ones specified in this file
universal = 0

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[pyscaffold]
# These were PyScaffold's parameters that were used when the project was created
version = 3.2.3
package = terraform-manager
extensions =
    pyproject
    tox
